--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
 *.iml
+.idea/
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/inspectionProfiles/
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
 .DS_Store
+
 /build
 /captures
 .externalNativeBuild
 .cxx
-local.properties
+
+google-services.json
+
+*.swp
