--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +15,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DK_HabitTracker"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".SharedHabitDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HabitStatisticsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DailyStatisticsActivity"
+            android:exported="false" />
         <activity
             android:name=".EditHabitActivity"
             android:exported="false" />
@@ -55,6 +65,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".ReminderReceiver" />
     </application>
 
 </manifest>
